<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:orientation="vertical">
	<LinearLayout android:layout_height="wrap_content" android:orientation="horizontal" android:gravity="center_vertical" android:layout_width="wrap_content">
		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in" android:textColor="#fff" android:textSize="8pt"></TextView><Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/AddAlarmTimeSpinner"></Spinner>
		
	

<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/minutes_before_departure" android:textColor="#fff" android:textSize="6pt"></TextView>
</LinearLayout><LinearLayout android:layout_height="wrap_content" android:gravity="center_vertical" android:layout_width="wrap_content"><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/on_next" android:textColor="#fff" android:textSize="8pt"></TextView><Spinner android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/AddAlarmDaySpinner"></Spinner>
</LinearLayout>
	<CheckBox android:text="@string/repeat" android:id="@+id/AddAlarmCheckboxRepeat" android:layout_width="fill_parent" android:layout_height="wrap_content"></CheckBox>
</LinearLayout>
