<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/fromGpsToMyPlace" android:gravity="center_vertical" android:background="@android:drawable/title_bar" android:textColor="#eee" />
	<GridView android:id="@+id/myplaces" android:layout_width="fill_parent" android:layout_height="wrap_content" android:numColumns="3"/>
	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/myStops" android:gravity="center_vertical" android:background="@android:drawable/title_bar" android:textColor="#eee" />
	<ListView android:id="@+id/android:list" android:layout_height="fill_parent" android:layout_width="fill_parent" android:scrollingCache="true"/>
	<TextView android:id="@id/android:empty" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/emptyList" android:gravity="center"/>
</LinearLayout>
